# OGL-RayTracer

./: CMakeLists.txt  CMakeSettings.json
src/: OGL RayTracer.cpp
src/Camera/: Camera.cpp  Camera.hpp
src/Object/: Object.cpp  Object.hpp
src/Object/Components/Transform/: Transform.hpp
src/Renderer/: Renderer.cpp  Renderer.hpp
src/Scene/: Scene.cpp  Scene.hpp
src/SceneObject/: SceneObject.hpp
src/SceneObject/Components/: Component.hpp
src/uiManager/: uiManager.cpp  uiManager.hpp
